# moderntensor_hedera

./: .env.example  .gitignore  COMPLETED_CHANGES.md  Dockerfile  HACKATHON_README.md  HEDERA_VERIFICATION.md  Makefile  README.md  WHITEPAPER.md  WORKFLOW_GUIDE.md  _check_env.py  api_inference.py  check_balance.py  clear_fake_data.py  cli.py  demo_all_roles.py  demo_full_onchain.py  demo_subnet.py  demo_subnet_epoch.py  demo_subnet_network.py  fetch_hcs.py  generate_protocol_data.py  pyproject.toml  railway.json  requirements.txt  run_miner.py  run_subnet_demo.py  run_validator.py  subnet_demo_output.txt  sync_real_data.py  test_epoch.py  test_onchain.py
contracts/: PaymentEscrow.abi.json  PaymentEscrow.sol  SubnetRegistry.sol  hardhat.config.js  package-lock.json  package.json
dashboard-ui/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
data/: emissions.json  miner_registry.json  network_state.json  task_manager.json  treasury_state.json  validator_registry.json
docs/: ## Theme 2: DeFi & Tokenization  BUSINESS_DEVELOPMENT.md  PITCH_DECK.md  ROADMAP.md  TOKENOMICS.md  VIDEO_SCRIPT.md  business_model_canvas.md  competitor_analysis.md  demo_page.html  demo_video_script.md  discord_recruitment.md  hackathon_strategy.md  market_opportunity.md  project_description.md  validation_research.md  walkthrough.md
examples/: requester_example.py
miners/: README.md  code_review_miner.py  sentiment_analyzer_miner.py  text_generator_miner.py
scripts/: create_test_data.py  demo.py  demo_agent_verification.py  demo_code_review.py  demo_proof_of_intelligence.py  demo_subnet_e2e.py  demo_video_e2e.py  deploy_contract.py  deploy_contracts.py  deploy_from_artifacts.py  deploy_test.py  deploy_testnet.sh  faucet_drip.py  faucet_server.py  hcs_submit.py  manage_subnet.py  populate_data.py  refine_inputs.py  setup_hedera.py  task_create.py  test_deploy.py  verify_all.py  verify_readiness.sh
sdk/: __init__.py
subnet/: __init__.py  config.py  miner_node.py  validator_node.py
tests/: conftest.py  test_fee_engine.py  test_miners.py  (+7 more)
(+245 files in other folders)
